# makepad-analyzer

./: .editorconfig  .gitignore  Cargo.toml  README.md
analyzer/: Cargo.toml
analyzer/src/: context.rs  main.rs
analyzer/src/core/: capablities.rs  context.rs  manifest.rs  mod.rs
analyzer/src/core/config/: logging.rs  mod.rs
analyzer/src/core/documents/: mod.rs
analyzer/src/core/errors/: directory_error.rs  document_error.rs  mod.rs
analyzer/src/core/session/: lru_session_cache.rs  mod.rs  session.rs  sync_workspace.rs
analyzer/src/handlers/: notification.rs  request.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs  log_with_styles.rs
editors/code/: package.json  pnpm-lock.yaml  tsconfig.json
editors/code/src/: main.ts
examples/simple/: Cargo.toml
examples/simple/src/: app.rs  main.rs
lib/lsp-server/: Cargo.toml
lib/makepad-lsp-server/: Cargo.toml
lib/makepad-lsp-server/src/: main.rs  utils.rs
