[workspace]
members  = ["analyzer", "crates/*"]
resolver = "2"

[workspace.package]
authors    = ["Tyrese Luo <tyreseluo@outlook.com>"]
categories = ["makepad"]
edition    = "2021"
license    = "MIT"

[workspace.dependencies]
# Internal crates
makepad-analyzer = { path = "./analyzer" }
makepad-analyzer-tracing        = { path = "crates/tracing", version = "0.0.1" }

# External crates
anyhow              = { version = "1.0"}
serde               = { version = "1.0" }
serde_json          = { version = "1.0" }
tokio               = { version = "1.0" }
tower-lsp           = { version = "0.20" }
lsp-types           = { version = "0.94.1" }
tracing             = { version = "0.1" }
tracing-subscriber  = { version = "0.3" }
thiserror           = { version = "2.0.11" }
parking_lot         = { version = "0.12" }