[package]
name        = "makepad-analyzer"
edition     = { workspace = true }
license     = "MIT"
version     = "0.1.0"

[dependencies]
anyhow                    = { workspace = true }
tower-lsp                 = { workspace = true, features = ["proposed"] }
tokio                     = { workspace = true, features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time",] }