[package]
name = "makepad-lsp-server"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4.17"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
anyhow = "1"
lsp-types = "0.91.0"
lsp-server = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"
